public/general/assets/css/lsp.css
/* ... */
.Modern-Slider .PrevArrow:before {
    content: '\f104';
}

ul.slick-dots {
    display: none!important;
}

.Modern-Slider .text-content {
    text-align: left;
    width: 75%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.Modern-Slider .item h6 {
    margin-bottom: 15px;
    font-size: 22px;
    text-transform: uppercase;
    font-weight: 700;
    letter-spacing: 1px;
    color: var(--primary-color);
    animation: fadeOutRight 1s both;
}

.Modern-Slider .item h4 {
    margin-bottom: 30px;
    text-transform: uppercase;
    font-size: 44px;
    font-weight: 700;
    letter-spacing: 2.5px;
    color: #FFF;
    overflow: hidden;
    animation: fadeOutLeft 1s both;
}

.Modern-Slider .item p {
    max-width: 570px;
    color: #fff;
    font-size: 15px;
    font-weight: 400;
    line-height: 30px;
    margin-bottom: 40px;
}

.Modern-Slider .item a {
    margin: 0 5px;
}

.Modern-Slider .item.slick-active h6 {
    animation: fadeInDown 1s both 1s;
}

.Modern-Slider .item.slick-active h4 {
    animation: fadeInLeft 1s both 1.5s;
}

.Modern-Slider .item.slick-active {
    animation: Slick-FastSwipeIn 1s both;
}

.Modern-Slider .buttons {
    position: relative;
}

.Modern-Slider {
    background: #000;
}


/* ==== Slick Slider Css Ruls === */

.slick-slider {
    position: relative;
    display: block;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-touch-callout: none;
    -khtml-user-select: none;
    -ms-touch-action: pan-y;
    touch-action: pan-y;
    -webkit-tap-highlight-color: transparent
}

.slick-list {
    position: relative;
    display: block;
    overflow: hidden;
    margin: 0;
    padding: 0
}

.slick-list:focus {
    outline: none
}

.slick-list.dragging {
    cursor: hand
}

.slick-slider .slick-track,
.slick-slider .slick-list {
    -webkit-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0)
}

.slick-track {
    position: relative;
    top: 0;
    left: 0;
    display: block
}

.slick-track:before,
.slick-track:after {
    display: table;
    content: ''
}

.slick-track:after {
    clear: both
}

.slick-loading .slick-track {
    visibility: hidden
}

.slick-slide {
    display: none;
    float: left/* If RTL Make This Right */
    ;
    height: 100%;
    min-height: 1px
}

.slick-slide.dragging img {
    pointer-events: none
}

.slick-initialized .slick-slide {
    display: block
}

.slick-loading .slick-slide {
    visibility: hidden
}

.slick-vertical .slick-slide {
    display: block;
    height: auto;
    border: 1px solid transparent
}


/* joRequest */

.request-form {
    background-color: var(--primary-color);
    padding: 40px 0px;
    color: #fff;
}

.request-form h4 {
    font-size: 22px;
    font-weight: 600;
}

.request-form span {
    font-size: 15px;
    font-weight: 400;
    display: inline-block;
    margin-top: 10px;
}

.request-form a.border-button {
    margin-top: 12px;
    float: right;
}


/* Services */

.services {
    margin-top: 70px;
}

.service-item img {
    width: 350px;
    height: 200px;
    overflow: hidden;
}

.service-item .down-content {
    background-color: #f7f7f7;
    padding: 30px;
}

.service-item .down-content h4 {
    font-size: 20px;
    font-weight: 700;
    letter-spacing: 0.25px;
    margin-bottom: 15px;
}

.service-item .down-content p {
    margin-bottom: 20px;
}


/* Fun Facts */

.fun-facts {
    margin-top: 100px;
    position: relative;
    /* background-image: url(../images/fun-facts-bg.jpg); */
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    padding: 140px 0px;
    color: #fff;
}

.fun-facts::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.6);
    z-index: 1;
}

.fun-facts > * {
    position: relative;
    z-index: 2;
}

.fun-facts span {
    text-transform: uppercase;
    font-size: 15px;
    color: #fff;
    letter-spacing: 1px;
    margin-bottom: 10px;
    display: block;
}

.fun-facts h2 {
    font-size: 36px;
    font-weight: 600;
    margin-bottom: 35px;
}

.fun-facts em {
    font-style: normal;
    color: var(--primary-color);
}

.fun-facts p {
    color: #fff;
    margin-bottom: 40px;
}

.fun-facts .left-content {
    margin-right: 45px;
}

.count-area-content {
    text-align: center;
    background-color: rgba(250, 250, 250, 0.1);
    padding: 25px 30px 35px 30px;
    margin: 15px 0px;
}

.count-digit {
    margin: 5px 0px;
    color: var(--secondary-color);
    font-weight: 700;
    font-size: 36px;
}

.count-title {
    font-size: 20px;
    font-weight: 600;
    color: #fff;
    letter-spacing: 0.5px;
}


/* More Info */

.more-info {
    margin-top: 60px;
}

.more-info .left-image img {
    width: 100%;
    overflow: hidden;
}

.more-info .left-image-logo img {
    width: 100%;
    margin: 30%;
    overflow: hidden;
}

.more-info .more-info-content {
    background-color: #f7f7f7;
}

.about-info .more-info-content {
    background-color: transparent;
}

.about-info .right-content {
    padding: 0px!important;
    margin-right: 30px;
}

.more-info .right-content {
    padding: 45px 45px 45px 30px;
}

.more-info .right-content span {
    text-transform: uppercase;
    font-size: 15px;
    color: #666;
    letter-spacing: 1px;
    margin-bottom: 10px;
    display: block;
}

.more-info .right-content h2 {
    font-size: 36px;
    font-weight: 600;
    margin-bottom: 35px;
}

.more-info .right-content em {
    font-style: normal;
    color: var(--primary-color);
}

.more-info .right-content p {
    margin-bottom: 30px;
}

.about-info .left-content {
    padding: 0px!important;
    margin-right: 30px;
}

.more-info .left-content {
    padding: 45px 45px 45px 30px;
    text-align: center;
}
/* ... */

